--- a/index.html
+++ b/index.html
@@ -452,10 +452,14 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Speakers</span>
-                            <span class="list_subtitle" style="top:45%">
-								<span>Ready.</span><span>Set.</span><span>Focus.</span>
-							</span>
-                            <div class="list_photo" data-image="images/photos/CarlosArturoTorres.jpg">
+                            <span class="list_subtitle" style="top:45%"> Ready.Set. Focus.</span>
+                            <div class="list_photo" data-image="images/photos/speakers/breyner_color.jpg">
+								<img class="blur" id="polaroid1" src="images/_placeholder2x.png"/>
+							</div>
+                            <div class="list_photo" data-image="images/photos/speakers/Bordalo_color.png">
+								<img class="blur" id="polaroid2" src="images/_placeholder2x.png"/> 
+							</div>
+                            <div class="list_photo" data-image="images/photos/speakers/pachet_color.jpg">
 								<img class="blur" src="images/_placeholder2x.png"/> 
 							</div>
                         </div>
