--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <meta name="twitter:site" content="@TEDxISTAlameda"/>
         <meta name="twitter:image" content="https://www.tedxistalameda.com/images/_tedxistalameda_social.jpg"/>      
 		
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-K3HL99R');</script>
+		<!-- End Google Tag Manager -->
+		
 		<link href="css/bootstrap.min.css" rel="stylesheet" type='text/css'>
 		<link href="css/tedxistalameda.css" rel="stylesheet" type='text/css'>
 		<link href="css/team.css" rel="stylesheet" type='text/css'>
@@ -195,6 +199,11 @@
 	</head>
 	
     <body class="home">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript>
+			<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3HL99R" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
         <main style="width: 100%;">
             <nav class="nav">
 				<!-- NAVIGATION X - hides expandable view -->
